--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,1 +1,27 @@
-<h1>Dashboard</h1>
+<h5>Dashboard</h5>
+<h3>Welcome {{name}}</h3>
+<h6>Student notes</h6>
+{{#if notes}}
+    <table class="striped">
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Date</th>
+                <th>Status</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            {{#each notes}}
+                <tr>
+                    <td><a href="/Notes/{{_id}}"></a>{{title}}</td>
+                    <td>{{createdAt}}</td>
+                    <td><span class="dash-status">{{status}}</span></td>
+                    <td></td>
+                </tr>
+            {{/each}}
+        </tbody>
+    </table>
+{{else}}
+<p>You've not created any notes yet</p>
+{{/if}}
