added edit buttons to each note so users can edit notes

--- a/views/notes/index.hbs
+++ b/views/notes/index.hbs
@@ -4,7 +4,7 @@
         <div class="col s12 m4">
             <div class="card">
                 <div class="card-image">
-
+                    {{{editIcon user ../user _id}}}
                 </div>
                 <div class="card-content center-align">
                     <h5>{{title}}</h5>
@@ -16,7 +16,7 @@
                     </div>
                 </div>
                 <div class="card-action center-align">
-                    <a href="/notes/{{_id}}" class=""" btn grey"></a>
+                    <a href="/notes/{{_id}}" class=" btn waves-effect waves-light blue darken-2">Read Note</a>
                 </div>
             </div>
         </div>
