--- a/views/notes/edit.hbs
+++ b/views/notes/edit.hbs
@@ -1,6 +1,7 @@
 <h3>Edit Note</h3>
 <div class="row">
-    <form action="/notes" method="post" class="col s12">
+    <form action="/notes/{{notes._id}}" method="post" class="col s12">
+    <input type="hidden" name="_method" value="PUT">
         <div class="row">
             <div class="input-field">
                 <input type="text" name="title" id="title" value="{{notes.title}}">
@@ -11,8 +12,10 @@
         <div class="row">
             <div class="input-field">
                 <select name="status" id="status">
+                    {{#select notes.status}}
                     <option value="public" selected>Public</option>
                     <option value="private">Private</option>
+                    {{/select}}
                 </select>
             </div>
         </div>
