moved sideNav to the right hand side of page on click

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -23,6 +23,9 @@
     <script>
         M.Sidenav.init(document.querySelector('.sidenav'))
         M.FormSelect.init(document.querySelector('#status'))
+        M.Sidenav.init(document.querySelector('.sidenav'), {
+            edge: 'right'
+        })
 
         CKEDITOR.replace('body', {
             pluglins: 'wysiwygarea, toolbar, basicstyles, link'
