--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -1,7 +1,7 @@
 <nav class="grey darken-3">
     <div class="nav-wrapper container">
         <a href="#" class="brand-logo center">Student Notes</a>
-        <a href="#" data-target="mobile-demo" class="sidenav-trigger show-on-large"><i class="fas fa-bars"></i></a>
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger show-on-large right"><i class="fas fa-bars"></i></a>
         <ul class="sidenav" id="mobile-demo">
             <li><a href="/notes">Notes</a></li>
             <li><a href="/dashboard">Dashboard</a></li>
