--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -7,6 +7,13 @@
             <li><a href="/dashboard">Dashboard</a></li>
             <li><a href="/auth/logout">Logout</a></li>
         </ul>
+
+        <div class="switch">
+            <label>Light
+            <input type="checkbox">
+            <span class="lever"></span>
+            Dark</label>
+        </div>
     </div>
 
 </nav>
