added styling to darkmode toggle switch, still to add functionality, darkmode currently active for testing

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -26,10 +26,13 @@
         M.Sidenav.init(document.querySelector('.sidenav'), {
             edge: 'right'
         })
-
+        
         CKEDITOR.replace('body', {
             pluglins: 'wysiwygarea, toolbar, basicstyles, link'
         })
     </script>
+    
+    <script rel="text/javascript" src="index.js" defer></script>
+
 </body>
 </html>
