--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -1,4 +1,4 @@
-<nav class="grey darken-3">
+<nav class="grey darken-4">
     <div class="nav-wrapper container">
         <a href="#" class="brand-logo center">Student Notes</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger show-on-large right"><i class="fas fa-bars"></i></a>
@@ -8,7 +8,7 @@
             <li><a href="/auth/logout">Logout</a></li>
         </ul>
 
-        <div class="switch">
+        <div class="switch" id="toggleSwitch-darkMode">
             <label>Light
             <input type="checkbox">
             <span class="lever"></span>
