--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,57 @@
 /*Login section*/
 
+body{
+    background-color: #282D35;
+    color: #ffffff;
+}
+
+.card{
+    background-color: #2e4b68;
+}
+
+/* When the switch is active/checked */
+
+.switch label input[type=checkbox]:checked + .lever {
+    background-color: rgba(22,95,199);
+
+}
+   
+.switch label input[type=checkbox]:checked + .lever:after {
+    background-color: #ffffff;
+}
+   
+   
+/* When the switch is inactive/unchecked */
+.switch label .lever {
+    content: "";
+    display: inline-block;
+    position: relative;
+    width: 36px;
+    height: 14px;
+    background-color: #45505a;
+    border-radius: 15px;
+    margin-right: 10px;
+    -webkit-transition: background 0.3s ease;
+    transition: background 0.3s ease;
+    vertical-align: middle;
+    margin: 0 16px;
+}
+  /* .switch label .lever:after {
+    background-color: #ffffff;
+    -webkit-box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+   
+} */
+
+  input[type=checkbox]:checked:not(:disabled) ~ .lever:active::before, 
+  input[type=checkbox]:checked:not(:disabled).tabbed:focus ~ .lever::before {
+    -webkit-transform: scale(2.4);
+            transform: scale(2.4);
+    background-color: rgba(206, 147, 216, 0.4);
+}
+   
+  
+
 .login-text-section{
     display: flex;
     flex-direction: column;
