added dark styling to the side-nav

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,5 +1,5 @@
 <div class="login-text-section">
-<h3 class="login-title"> Student Notes</h3>
+<h3 class="login-title"><i class="fa-solid fa-note-sticky"></i>  Student Notes</h3>
 <p>Login to create new lesson notes</p>
 </div>
 </div>
