--- a/views/partials/_header.hbs
+++ b/views/partials/_header.hbs
@@ -2,10 +2,10 @@
     <div class="nav-wrapper container">
         <a href="#" class="brand-logo center">Student Notes</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger show-on-large right"><i class="fas fa-bars"></i></a>
-        <ul class="sidenav" id="mobile-demo">
-            <li><a href="/notes">Notes</a></li>
-            <li><a href="/dashboard">Dashboard</a></li>
-            <li><a href="/auth/logout">Logout</a></li>
+        <ul class="sidenav white-text" id="mobile-demo">
+            <li><a href="/notes" class="white-text">Notes</a></li>
+            <li><a href="/dashboard" class="white-text">Dashboard</a></li>
+            <li><a href="/auth/logout" class="white-text">Logout</a></li>
         </ul>
 
         <div class="switch" id="toggleSwitch-darkMode">
