--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,4 @@
-/*Login section*/
-
+/*DarkMode styles*/
 body{
     background-color: #282D35;
     color: #ffffff;
@@ -8,7 +7,14 @@ body{
 .card{
     background-color: #2e4b68;
 }
+.sidenav{
+    background-color: #282D35;
+    color: white;
+}
 
+.side-nav-text{
+    color: white;
+}
 /* When the switch is active/checked */
 
 .switch label input[type=checkbox]:checked + .lever {
@@ -51,7 +57,7 @@ body{
 }
    
   
-
+/*Login section*/
 .login-text-section{
     display: flex;
     flex-direction: column;
