--- a/views/notes/edit.hbs
+++ b/views/notes/edit.hbs
@@ -4,7 +4,7 @@
     <input type="hidden" name="_method" value="PUT">
         <div class="row">
             <div class="input-field">
-                <input type="text" name="title" id="title" value="{{notes.title}}">
+                <input class="white-text" type="text" name="title" id="title" value="{{notes.title}}">
                 <label for="title">Title</label>
             </div>
         </div>
