--- a/views/notes/readNote.hbs
+++ b/views/notes/readNote.hbs
@@ -22,7 +22,7 @@
                 <a href="/notes/user/{{notes.user._id}}"><img src="{{notes.user.image}}" alt="user profile image" class="circle responsive-img img-small"></a>
             </div>
             <div class="card-action">
-                <a href="/notes/user/{{notes.user._id}}">More From {{notes.user.firstName}}</a>
+                <a class="amber-text text-darken-1" href="/notes/user/{{notes.user._id}}">More From {{notes.user.firstName}}</a>
             </div>
         </div>
     </div>
