--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,15 @@
-/*DarkMode styles*/
+/*Basic styles*/
 body{
+    display: flex;
+    flex-direction: column;
     background-color: #282D35;
     color: #ffffff;
+    min-height: 100vh;
 }
 
+main{
+    flex: 1 0 auto;
+}
 .card{
     background-color: #2e4b68;
 }
@@ -15,47 +21,12 @@ body{
 .side-nav-text{
     color: white;
 }
-/* When the switch is active/checked */
-
-.switch label input[type=checkbox]:checked + .lever {
-    background-color: rgba(22,95,199);
-
+   
+/*For the dashboard striping*/
+.striped{
+    background-color: #2e4b68;
 }
-   
-.switch label input[type=checkbox]:checked + .lever:after {
-    background-color: #ffffff;
-}
-   
-   
-/* When the switch is inactive/unchecked */
-.switch label .lever {
-    content: "";
-    display: inline-block;
-    position: relative;
-    width: 36px;
-    height: 14px;
-    background-color: #45505a;
-    border-radius: 15px;
-    margin-right: 10px;
-    -webkit-transition: background 0.3s ease;
-    transition: background 0.3s ease;
-    vertical-align: middle;
-    margin: 0 16px;
-}
-  /* .switch label .lever:after {
-    background-color: #ffffff;
-    -webkit-box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
-    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
-   
-} */
-
-  input[type=checkbox]:checked:not(:disabled) ~ .lever:active::before, 
-  input[type=checkbox]:checked:not(:disabled).tabbed:focus ~ .lever::before {
-    -webkit-transform: scale(2.4);
-            transform: scale(2.4);
-    background-color: rgba(206, 147, 216, 0.4);
-}
-   
+/* When the switch is inactive/unchecked */   
   
 /*Login section*/
 .login-text-section{
@@ -111,4 +82,26 @@ input.select-dropdown {
 ul.dropdown-content.select-dropdown li span {
     background: #282D35;
     color: #fff;
+}
+
+/*arrangement for the delete, cancel and save buttons in the edit screen*/
+.edit-btns{
+    display: flex;
+    gap: .5rem;
+}
+
+
+/*Footer Section*/
+footer{
+    display: flex;
+    flex-direction: column;
+    margin-top: auto;
+    padding: .5rem 1rem .5rem 1rem;
+}
+
+.link-tags{
+    display: flex;
+    font-size: 1.2rem;
+    gap: .7rem;
+    padding-left: 1rem;
 }
