--- a/views/notes/index.hbs
+++ b/views/notes/index.hbs
@@ -1,8 +1,8 @@
 <h1>Notes</h1>
-<div class="row">
+<div class="card-note-section">
     {{#each notes}}
         <div class="col s12 m4">
-            <div class="card">
+            <div class="card ">
                 <div class="card-image">
                     {{{editIcon user ../user _id}}}
                 </div>
