chore: update Github username

--- a/views/partials/_footer.hbs
+++ b/views/partials/_footer.hbs
@@ -1,10 +1,15 @@
-
 <footer>
-    <small class="left">© 2022 by Mark Linn</small>
+  <small class="left">© 2022 by Mark Linn</small>
 
-    <div class="link-tags">
-    <a href="https://github.com/marksist300" target="_blank"><i class="fa-brands fa-github fa-decoration"></i></a>
-    <a href="https://twitter.com/marksist_300" target="_blank"><i class="fa-brands fa-twitter fa-decoration"></i></a>
-    <a href="mailto:marklinndev@gmail.com" target="_blank"><i class="fa-solid fa-envelope fa-decoration"></i></a>
-    </div>
+  <div class="link-tags">
+    <a href="https://github.com/marktlinn" target="_blank"><i
+        class="fa-brands fa-github fa-decoration"
+      ></i></a>
+    <a href="https://twitter.com/marksist_300" target="_blank"><i
+        class="fa-brands fa-twitter fa-decoration"
+      ></i></a>
+    <a href="mailto:marklinndev@gmail.com" target="_blank"><i
+        class="fa-solid fa-envelope fa-decoration"
+      ></i></a>
+  </div>
 </footer>
